# Valhalla

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  TestScript.cs  _vcpkg.json  dissector.txt  old_steam_appid.txt  perlinnoise.c  perlinnoise.txt  prafab_hashes_0_211_11_beta.csv  prafab_hashes_0_211_11_beta_views.csv  prafab_hashes_0_211_11_beta_views.xlsx  prefab_hashes.csv  rpcs.xlsx  status_effects_0_211_11_beta.csv  status_effects_0_211_11_beta.xlsx  steam_appid.txt  zdos.xlsx  zoneLocations.xlsx
cmake/: VHSettings.cmake  get_luajit.cmake  get_steamapi.cmake  get_steamworks_sdk.cmake
components/unordered_dense/: CMakeLists.txt
data/: admin.txt  admin.yml  dungeons.pkg  features.pkg  locations - Copy.csv  locations.csv  prefabs.pkg  randomEvents.pkg  server.yml  vegetation.pkg  zoneLocations.pkg
data/client_data/scripts/: entry.lua  menu.lua
data/client_data/ui/: connecting-menu.rml  main-menu-styles.rcss  main-menu.html  main-menu.rml  password-menu-styles.rcss
data/locationTraces/: AbandonedLogCabin02.trace  Bonemass.trace  Crypt2.trace  Dolmen01.trace  Dolmen02.trace  Dolmen03.trace  Dragonqueen.trace  DrakeLorestone.trace  Eikthyrnir.trace  GDKing.trace  GoblinKing.trace  Greydwarf_camp1.trace  Meteorite.trace  Mistlands_DvergrBossEntrance1.trace  Mistlands_DvergrTownEntrance1.trace  Mistlands_DvergrTownEntrance2.trace  Mistlands_Excavation1.trace  Mistlands_Excavation2.trace  Mistlands_Excavation3.trace  Mistlands_GuardTower1_new.trace  Mistlands_GuardTower1_ruined_new.trace  Mistlands_GuardTower1_ruined_new2.trace  Mistlands_GuardTower2_new.trace  Mistlands_GuardTower3_new.trace  Mistlands_GuardTower3_ruined_new.trace  Mistlands_Harbour1.trace  Mistlands_Lighthouse1_new.trace  Mistlands_RoadPost1.trace  Mistlands_RockSpire1.trace  Mistlands_Statue1.trace  Mistlands_Statue2.trace  Mistlands_StatueGroup1.trace  Mistlands_Swords1.trace  Mistlands_Swords2.trace  Mistlands_Swords3.trace  Mistlands_Viaduct1.trace  Mistlands_Viaduct2.trace  MountainGrave01.trace  Ruin1.trace  Ruin2.trace  (+50 more)
data/mods/: config.lua  stringext.lua  toml.lua
data/mods/--BenchmarkStatistics/: BenchmarkStatistics.lua
data/mods/--Commands/: Main.lua  modInfo.yml
data/mods/--Compress/: Compress.lua  Main.lua  modInfo.yml
data/mods/--Hello Valhalla/: Main.lua  modInfo.lua
data/mods/--My example mod/: Main.lua  modInfo.lua
data/mods/--My other mod/: Main.lua  modInfo.lua
data/mods/--Portals/: Main.lua  modInfo.yml
data/mods/--PotionsPlus/: PotionsPlus.lua  com.odinplus.potionsplus.cfg  modInfo.yml
data/mods/--RareMagicPortal/: RareMagicPortal.lua
data/mods/--ZoneProtect/: Main.lua  modInfo.yml
data/mods/BenchmarkStatistics/: BenchmarkStatistics.lua  modInfo.yml
data/mods/BetterNetworking/: BetterNetworking.lua  modInfo.yml  small
data/mods/ChatTweaks/: ChatTweaks.lua  modInfo.yml
data/mods/Commands/: Commands.lua  Main.lua  modInfo.yml
data/mods/Compress/: Compress.lua  Main.lua  modInfo.lua
data/mods/CompressModLua/: Main.lua  modInfo.lua
data/mods/My example mod/: Main.lua  modInfo.lua
data/mods/My join mod/: Main.lua  modInfo.lua
data/mods/My other mod/: Main.lua  modInfo.lua
data/mods/My rpc callback mod/: Main.lua  modInfo.lua
data/mods/Portals/: Main.lua  Portals.lua  PortalsZDO.lua  modInfo.yml
data/mods/RareMagicPortal/: toml.lua  (+3 more)
data/scripts/: entry.lua  menu.lua
data/server_data/: settings.txt
data/tests/: dungeons.pkg  euler_values.txt  lookrotation_values.txt  perlin_values.txt  prefabs.pkg  random_values.txt  zdo.sav  zdo.ser  zoneLocations.pkg
data/ui/: connecting-menu-styles.rcss  connecting-menu.rml  main-menu-styles.rcss  main-menu.rml  password-menu-styles.rcss  password-menu.rml  styles.rcss
data/worlds/: _world.db  betatest0p216p5.db  betatest0p216p5.fwl  world.fwl
docs/: Main.java  prefabs.csv  todo.txt  vegetation.csv  vegetation.xlsx  zdos.xlsx  zoneLocations.xlsx
docs/0_212_9/: vegetation.csv  zoneLocations.csv
docs/old/: rpcs.xlsx  zoneLocations.csv
enc_temp_folder/19273fba89b04230f4fc97e6a0989dc2/: ZoneManager.cpp
include/: Agent.h  AsyncDeque.h  AsyncDeque.hpp  BinaryReader.h  BinaryReader.hpp  BinaryWriter.h  BinaryWriter.hpp  Biome.h  BitPack.h  ChatManager.h  Chunk.hpp  Client.hpp  CompileSettings.h  ConsoleSSH.h  DataReader.h  DataStream.h  DataWriter.h  DiscordManager.h  Dungeon.h  DungeonGenerator.h  DungeonManager.h  DungeonRoom.h  DungeonRoomConnection.h  EventManager.h  Game.h  Game.hpp  GameObject.h  GameObjectManager.h  GeoManager.h  HMBuildData.h  HashUtils.h  HashUtils.hpp  Hashes.h  HeightMap.h  HeightmapBuildData.h  HeightmapBuilder.h  HeightmapManager.h  ICallable.h  IntrusiveList.h  LuaEvent.h  (+123 more)
include/objects/: Object.h  Piece.h  Player.h  Portal.h  Sign.h  Ward.h
main/: CMakeLists.txt  Main.cpp  NetAcceptor.cpp  NetManager.cpp  NetSocket.cpp  Peer.cpp  RouteManager.cpp  VUtils.cpp  VUtilsMath.cpp  VUtilsRandom.cpp  VUtilsResource.cpp  ValhallaServer.cpp  Vector.cpp  WorldManager.cpp  ZDO.cpp  ZDOManager.cpp  ZoneManager.cpp
misc-info/: ideas.txt  todo.txt
misc-info/old/: README.md
protocol/: README.md
src/: AcceptorSteamP2P.cpp  BinaryReader.cpp  BinaryWriter.cpp  CaptureSteamSocket.cpp  ChatManager.cpp  Chunk.cpp  Client.cpp  ClientRpc.cpp  ConsoleSSH.cpp  DataReader.cpp  DataWriter.cpp  DiscordManager.cpp  DungeonGenerator.cpp  DungeonManager.cpp  DungeonRoom.cpp  EventManager.cpp  Game.cpp  GameObject.cpp  GeoManager.cpp  HashUtils.cpp  Heightmap.cpp  HeightmapBuilder.cpp  HeightmapManager.cpp  Main.cpp  MathUtils.cpp  ModManager.cpp  MyFileInterface.cpp  MyRenderInterface.cpp  MySystemInterface.cpp  NetAcceptorSteam.cpp  NetAcceptorSteamDedicated.cpp  NetAcceptorSteamP2P.cpp  NetAcceptorTCP.cpp  NetAsioSocket.cpp  NetClient.cpp  NetID.cpp  NetManager.cpp  NetObject.cpp  NetPackage.cpp  NetPacket.cpp  (+68 more)
src/client/: Client.cpp  ClientMain.cpp  ClientRpc.cpp  MyFileInterface.cpp  MyRenderInterface.cpp  MySystemInterface.cpp  ScriptManager.cpp  Shader.cpp  SpriteRenderer.cpp  Texture2D.cpp
src/server/: Server.cpp  ServerMain.cpp  ServerRpc.cpp
(+10 files in other folders)
